# graphviz-static

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test_expample.py
.github/workflows/: publish.yml
graphviz_static/: __init__.py  main.py
