[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphviz-static"
version = "0.2.0"
description = "A Graphviz static wrapper for Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
authors = [
    {name = "Hvd/tbtn123/toibithieunang123"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/tbtn123/graphviz-static"
Repository = "https://github.com/tbtn123/graphviz-static"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"graphviz_static" = ["bin/**/*"]
